remote stuck now and DJ remote sliding fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -657,7 +657,7 @@ button.search.active {
   width: 114px !important;
   float: right;
   display: block;
-  margin-top: 130px;
+  margin-top: -17px;
   margin-right: 5px;
   text-align: center;
   z-index: 1000;
@@ -683,7 +683,6 @@ button.search.active {
   width: 114px;
   height: 70px;
   display: block;
-  cursor: n-resize;
 }
 #remote-container #remote .side-button-container {
   margin-top: 10px;
